--- a/css/style.css
+++ b/css/style.css
@@ -106,7 +106,11 @@ img, video, audio {
   clear: both;
 }
 
-[class*="col-"], #featured-property {
+.col-3 {
+  
+}
+
+[class*="col-"] {
   margin-left: 2%;
   background: #ccc;
 }
